# intrinsic_sdk_ros

./: .gitmodules  README.md
.github/workflows/: build.yml
grpc_vendor/: CMakeLists.txt  package.xml
intrinsic_sdk/: CMakeLists.txt  package.xml
intrinsic_sdk/cmake/: intrinsic_sdk-extras.cmake.in  intrinsic_sdk_protobuf.cmake  intrinsic_sdk_services.cmake  intrinsic_sdk_skills.cmake  skill_main.cpp.in
intrinsic_sdk/scripts/: textproto_to_binproto.py
resources/: Dockerfile.base  Dockerfile.service  Dockerfile.skill
resources/patched_rviz/: Dockerfile  grpc_vendor  intrinsic_sdk
scripts/: build_base.sh  build_bundle.sh  build_container.sh  setup_docker.sh
